--- a/setup/pizza.service
+++ b/setup/pizza.service
@@ -2,7 +2,7 @@
 Description=PizzaPi Startup Service
 
 [Service]
-ExecStart=/root/PizzaPi/setup/boot.sh
+ExecStart=~/PizzaPi/setup/boot.sh
 
 [Install]
 WantedBy=default.target
